Updated page TechDraw ComplexSection/fr

--- a/wiki/fr/TechDraw_ComplexSection.html
+++ b/wiki/fr/TechDraw_ComplexSection.html
@@ -52,11 +52,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Vue en coupe complexe</b> ins&egrave;re une vue en coupe transversale bas&eacute;e sur une vue de la pi&egrave;ce existante et un profil.
-</p>
-</div> 
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_QuarterSection_example.png&amp;filetimestamp=20221216102804&amp;.html" class="mw-file-description"><img src="../File/TechDraw_QuarterSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
+<p>L'outil <b>TechDraw Vue en coupe complexe</b> ins&egrave;re une vue en coupe transversale bas&eacute;e sur une vue de la pi&egrave;ce existante et un profil. 
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_QuarterSection_example.png&amp;filetimestamp=20221216102804&amp;.html" class="mw-file-description"><img src="../File/TechDraw_QuarterSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en quart de coupe cr&eacute;&eacute;e avec l'outil Vue en coupe complexe</p>
@@ -180,13 +177,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117140837
+Cached time: 20260117140846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.153 seconds
-Preprocessor visited node count: 620/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 619/1000000
 Post&#8208;expand include size: 28778/2097152 bytes
 Template argument size: 10860/2097152 bytes
 Highest expansion depth: 7/100
@@ -196,19 +193,19 @@ Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.633      1 -total
- 21.82%    7.340      1 Template:TechDraw_Tools_navi/fr
- 13.97%    4.699      2 Template:Navigation_menu_2
- 13.36%    4.493      4 Template:PropertyData
-  8.87%    2.984      2 Template:Docnav/fr
-  8.41%    2.827      1 Template:TitleProperty
-  8.06%    2.712      1 Template:Userdocnavi/fr
-  7.95%    2.674      4 Template:Variable
-  7.54%    2.536      1 Template:Code
-  6.70%    2.252      1 Template:GuiCommand/fr
+100.00%   38.480      1 -total
+ 20.00%    7.696      1 Template:TechDraw_Tools_navi/fr
+ 12.49%    4.805      2 Template:Navigation_menu_2
+ 11.89%    4.576      4 Template:PropertyData
+ 10.65%    4.099      1 Template:Userdocnavi/fr
+  9.73%    3.744      1 Template:GuiCommand/fr
+  8.83%    3.397      1 Template:TitleProperty
+  7.05%    2.713      3 Template:Caption
+  6.72%    2.587      4 Template:Variable
+  6.24%    2.400      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140837 and revision id 1739520. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140846 and revision id 1739522. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
