--- a/wiki/fr/TechDraw_ComplexSection.html
+++ b/wiki/fr/TechDraw_ComplexSection.html
@@ -55,9 +55,7 @@
 <p>L'outil <b>TechDraw Vue en coupe complexe</b> ins&egrave;re une vue en coupe transversale bas&eacute;e sur une vue de la pi&egrave;ce existante et un profil. 
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_QuarterSection_example.png&amp;filetimestamp=20221216102804&amp;.html" class="mw-file-description"><img src="../File/TechDraw_QuarterSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en quart de coupe cr&eacute;&eacute;e avec l'outil Vue en coupe complexe</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en coupe quart de section cr&eacute;&eacute;e &agrave; l'aide de cet outil</p>
 <p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AlignedSection_example.png&amp;filetimestamp=20221216102711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AlignedSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -177,15 +175,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117140846
+Cached time: 20260117140905
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.142 seconds
-Preprocessor visited node count: 619/1000000
-Post&#8208;expand include size: 28778/2097152 bytes
-Template argument size: 10860/2097152 bytes
+CPU time usage: 0.115 seconds
+Real time usage: 0.176 seconds
+Preprocessor visited node count: 618/1000000
+Post&#8208;expand include size: 28770/2097152 bytes
+Template argument size: 10856/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -193,19 +191,19 @@ Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.480      1 -total
- 20.00%    7.696      1 Template:TechDraw_Tools_navi/fr
- 12.49%    4.805      2 Template:Navigation_menu_2
- 11.89%    4.576      4 Template:PropertyData
- 10.65%    4.099      1 Template:Userdocnavi/fr
-  9.73%    3.744      1 Template:GuiCommand/fr
-  8.83%    3.397      1 Template:TitleProperty
-  7.05%    2.713      3 Template:Caption
-  6.72%    2.587      4 Template:Variable
-  6.24%    2.400      2 Template:Docnav/fr
+100.00%   49.196      1 -total
+ 19.15%    9.420      1 Template:TechDraw_Tools_navi/fr
+ 13.23%    6.511      4 Template:PropertyData
+ 11.19%    5.503      2 Template:Navigation_menu_2
+  9.38%    4.612      1 Template:TitleProperty
+  8.85%    4.356      1 Template:Userdocnavi/fr
+  7.98%    3.927      3 Template:Value
+  7.54%    3.711      1 Template:GuiCommand/fr
+  7.33%    3.607      4 Template:Variable
+  6.63%    3.264      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140846 and revision id 1739522. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140905 and revision id 1739524. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
