--- a/wiki/fr/TechDraw_ComplexSection.html
+++ b/wiki/fr/TechDraw_ComplexSection.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ComplexSection/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ComplexSection&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw KomplexerSchnitt (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ComplexSection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ComplexSection (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Sezione complessa (70% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw przekr&oacute;j z&#322;o&#380;ony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#48373;&#54633;&#45800;&#47732; (35% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -61,9 +61,7 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en coupe align&eacute;e cr&eacute;&eacute;e &agrave; l'aide de cet outil</p>
 <p><span typeof="mw:File"><a href="../index.php?title=TechDraw_OffsetSection_example.png&amp;filetimestamp=20221216102740&amp;.html" class="mw-file-description"><img src="../File/TechDraw_OffsetSection_example.png" decoding="async" width="350" height="298" class="mw-file-element" data-file-width="470" data-file-height="400"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en coupe d&eacute;cal&eacute;e cr&eacute;&eacute;e avec l'outil Vue en coupe complexe</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Une vue en coupe d&eacute;cal&eacute;e cr&eacute;&eacute;e &agrave; l'aide de cet outil</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -173,35 +171,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117140919
+Cached time: 20260117140941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 617/1000000
-Post&#8208;expand include size: 28746/2097152 bytes
-Template argument size: 10844/2097152 bytes
+CPU time usage: 0.109 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 616/1000000
+Post&#8208;expand include size: 28722/2097152 bytes
+Template argument size: 10832/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4383/5000000 bytes
+Unstrip post&#8208;expand size: 4387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.193      1 -total
- 16.99%    6.830      1 Template:TechDraw_Tools_navi/fr
- 12.47%    5.012      1 Template:GuiCommand/fr
- 11.24%    4.516      2 Template:Navigation_menu_2
- 10.81%    4.343      4 Template:PropertyData
-  9.29%    3.735      1 Template:TitleProperty
-  9.00%    3.618      1 Template:Userdocnavi/fr
-  8.58%    3.450      2 Template:Docnav/fr
-  6.51%    2.617      1 Template:MenuCommand
-  6.39%    2.568      4 Template:Variable
+100.00%   40.931      1 -total
+ 21.63%    8.854      1 Template:TechDraw_Tools_navi/fr
+ 14.05%    5.751      2 Template:Navigation_menu_2
+ 12.35%    5.053      4 Template:PropertyData
+  9.82%    4.019      1 Template:Userdocnavi/fr
+  8.37%    3.424      2 Template:Docnav/fr
+  7.45%    3.049      1 Template:GuiCommand/fr
+  6.98%    2.859      1 Template:Code
+  6.95%    2.846      4 Template:Variable
+  6.31%    2.581      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140919 and revision id 1739526. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140941 and revision id 1739528. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
