--- a/wiki/fr/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/fr/TechDraw_CommandAddOffsetVertex.html
@@ -15,7 +15,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw CommandAddOffsetVertex
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Sommet d&eacute;cal&eacute;
 </p>
 </td></tr>
 <tr>
@@ -52,7 +52,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Ajouter un sommet d&eacute;cal&eacute;</b> ajoute un sommet cosm&eacute;tique &agrave; un d&eacute;calage sp&eacute;cifi&eacute; par rapport &agrave; un sommet s&eacute;lectionn&eacute;.
+<p>L'outil <b>TechDraw Sommet d&eacute;cal&eacute;</b> ajoute un sommet cosm&eacute;tique &agrave; un d&eacute;calage sp&eacute;cifi&eacute; par rapport &agrave; un sommet s&eacute;lectionn&eacute;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex_Example.png&amp;filetimestamp=20231224124245&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex_Example.png" decoding="async" width="200" height="126" class="mw-file-element" data-file-width="484" data-file-height="306"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Sommet s&eacute;lectionn&eacute; et sommet cosm&eacute;tique ajout&eacute;</p>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141435
+Cached time: 20260117141509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 356/1000000
-Post&#8208;expand include size: 25900/2097152 bytes
-Template argument size: 9950/2097152 bytes
+CPU time usage: 0.070 seconds
+Real time usage: 0.131 seconds
+Preprocessor visited node count: 358/1000000
+Post&#8208;expand include size: 25886/2097152 bytes
+Template argument size: 9967/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +130,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.821      1 -total
- 25.67%   12.787      1 Template:Userdocnavi/fr
- 24.30%   12.109      2 Template:Navigation_menu_2
- 20.72%   10.325      1 Template:TechDraw_Tools_navi/fr
- 15.09%    7.517      3 Template:MenuCommand
- 11.42%    5.688      1 Template:GuiCommand/fr
-  9.85%    4.907      2 Template:Button
-  8.57%    4.272      2 Template:Docnav/fr
-  7.02%    3.499      1 Template:Caption
+100.00%   28.972      1 -total
+ 26.24%    7.603      1 Template:TechDraw_Tools_navi/fr
+ 19.00%    5.505      2 Template:Navigation_menu_2
+ 18.12%    5.251      1 Template:Userdocnavi/fr
+ 14.49%    4.199      1 Template:GuiCommand/fr
+ 12.92%    3.744      2 Template:Docnav/fr
+ 12.84%    3.721      1 Template:Caption
+  7.20%    2.086      3 Template:MenuCommand
+  5.19%    1.505      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117141435 and revision id 1739514. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117141509 and revision id 1739536. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
