--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -1,20 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticCircle/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Hilfskreis (74% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hilfskreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (74% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw CosmeticCircle
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1050;&#1086;&#1089;&#1084;&#1077;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1050;&#1088;&#1091;&#1075;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#50896; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/fr">Ligne cosm&eacute;tique par 2 points</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">Apparence des lignes</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Sommet d&eacute;cal&eacute;</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=TechDraw_TechDraw_ExtensionDrawCosmCircle/fr&amp;action=edit&amp;redlink=1.html" class="new" title="TechDraw TechDraw ExtensionDrawCosmCircle/fr (page does not exist)">Cercle cosm&eacute;tique par 2 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -153,35 +151,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112520
+Cached time: 20260117141652
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.106 seconds
-Preprocessor visited node count: 411/1000000
-Post&#8208;expand include size: 26989/2097152 bytes
-Template argument size: 10189/2097152 bytes
+CPU time usage: 0.100 seconds
+Real time usage: 0.212 seconds
+Preprocessor visited node count: 410/1000000
+Post&#8208;expand include size: 27094/2097152 bytes
+Template argument size: 10259/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1641/5000000 bytes
+Unstrip post&#8208;expand size: 1651/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.549      1 -total
- 30.72%    9.077      1 Template:TechDraw_Tools_navi/fr
- 17.34%    5.125      1 Template:Userdocnavi/fr
- 15.57%    4.602      2 Template:Navigation_menu_2
- 11.67%    3.449      2 Template:Docnav/fr
- 11.17%    3.300      1 Template:GuiCommand/fr
- 10.35%    3.058      1 Template:KEY
-  5.03%    1.486      1 Template:Incode
-  4.15%    1.225      1 Template:Caption
-  3.41%    1.008      4 Template:Button
+100.00%   41.381      1 -total
+ 22.92%    9.484      1 Template:TechDraw_Tools_navi/fr
+ 16.10%    6.664      2 Template:Docnav/fr
+ 15.51%    6.416      2 Template:Navigation_menu_2
+ 11.41%    4.720      1 Template:Userdocnavi/fr
+ 10.31%    4.265      1 Template:GuiCommand/fr
+  9.17%    3.796      1 Template:Caption
+  8.52%    3.526      2 Template:MenuCommand
+  8.35%    3.455      4 Template:Button
+  5.39%    2.232      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260111112520 and revision id 1733334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117141652 and revision id 1739538. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
