--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -104,14 +104,12 @@
 </p><p>Les cercles cosm&eacute;tiques peuvent &ecirc;tre cr&eacute;&eacute;s &agrave; l'aide de la m&eacute;thode <code>makeCosmeticCircle(center, radius, start angle, end angle)</code> de DrawViewPart.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/fr">Ligne cosm&eacute;tique par 2 points</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">Apparence des lignes</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Sommet d&eacute;cal&eacute;</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=TechDraw_TechDraw_ExtensionDrawCosmCircle/fr&amp;action=edit&amp;redlink=1.html" class="new" title="TechDraw TechDraw ExtensionDrawCosmCircle/fr (page does not exist)">Cercle cosm&eacute;tique par 2 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -151,15 +149,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141652
+Cached time: 20260117141705
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.212 seconds
-Preprocessor visited node count: 410/1000000
-Post&#8208;expand include size: 27094/2097152 bytes
-Template argument size: 10259/2097152 bytes
+CPU time usage: 0.094 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 409/1000000
+Post&#8208;expand include size: 27199/2097152 bytes
+Template argument size: 10329/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -167,19 +165,19 @@ Unstrip post&#8208;expand size: 1651/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.381      1 -total
- 22.92%    9.484      1 Template:TechDraw_Tools_navi/fr
- 16.10%    6.664      2 Template:Docnav/fr
- 15.51%    6.416      2 Template:Navigation_menu_2
- 11.41%    4.720      1 Template:Userdocnavi/fr
- 10.31%    4.265      1 Template:GuiCommand/fr
-  9.17%    3.796      1 Template:Caption
-  8.52%    3.526      2 Template:MenuCommand
-  8.35%    3.455      4 Template:Button
-  5.39%    2.232      1 Template:KEY
+100.00%   36.776      1 -total
+ 26.61%    9.786      1 Template:TechDraw_Tools_navi/fr
+ 17.25%    6.344      2 Template:Navigation_menu_2
+ 16.16%    5.943      1 Template:Userdocnavi/fr
+ 12.58%    4.627      1 Template:GuiCommand/fr
+  9.98%    3.672      2 Template:Docnav/fr
+  8.03%    2.953      1 Template:Incode
+  7.23%    2.659      2 Template:MenuCommand
+  6.69%    2.460      1 Template:Caption
+  4.87%    1.790      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117141652 and revision id 1739538. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117141704 and revision id 1739540. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
