Created page with "* Standardmäßig ist dieser Abschnitt ausgeblendet. Das Fenster wird angezeigt, wenn das Optionsfeld {{RadioButton|TRUE|Clock}} aktiviert ist. {{clear}} [[File:FCCircularText 16.png|left]] * Wenn die Auswahl getroffen ist, werden die folgenden Funktionen dunkel und sind nutzbar: *# Begin angle (Startwinkel). *# End angle (Endwinkel). *# Correction angle (Korrekturwinkel). *# Correction radius (Korrekturradius). *# Die Schaltflächen {{Button|Mode Stand}} oder {{Button|M..."

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -2,9 +2,9 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: FCCircularText (98% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (96% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -395,19 +395,17 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </ul>
 </center>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>By default, the section is hidden. The window is visible if the radio button <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clock<span></span></span> is checked</li></ul>
+<ul><li>Standardm&auml;&szlig;ig ist dieser Abschnitt ausgeblendet. Das Fenster wird angezeigt, wenn das Optionsfeld <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clock<span></span></span> aktiviert ist.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_16.png&amp;filetimestamp=20200601143709&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_16.png" decoding="async" width="492" height="452" class="mw-file-element" data-file-width="492" data-file-height="452"></a><figcaption></figcaption></figure>
-<ul><li>When the selection is made, the following functions get dark and are usable:
-<ol><li>Begin angle.</li>
-<li>End angle.</li>
-<li>Correction angle.</li>
-<li>Correction radius.</li>
-<li>The buttom <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> or <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
-<li>The area <b>Clock</b> is activated.</li></ul>
+<ul><li>Wenn die Auswahl getroffen ist, werden die folgenden Funktionen dunkel und sind nutzbar:
+<ol><li>Begin angle (Startwinkel).</li>
+<li>End angle (Endwinkel).</li>
+<li>Correction angle (Korrekturwinkel).</li>
+<li>Correction radius (Korrekturradius).</li>
+<li>Die Schaltfl&auml;chen <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> oder <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
+<li>Der Bereich <b>Clock</b> (Uhr) wird aktiviert.</li></ul>
 <div style="clear:both"></div>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
 <ul><li><b>Radius of support</b>&nbsp;: If a value is given, support will be created (default 0).</li>
@@ -984,35 +982,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224628
+Cached time: 20260117141730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.391 seconds
-Real time usage: 0.572 seconds
-Preprocessor visited node count: 1600/1000000
+CPU time usage: 0.507 seconds
+Real time usage: 0.772 seconds
+Preprocessor visited node count: 1599/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66468/5000000 bytes
+Unstrip post&#8208;expand size: 66478/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  361.766      1 -total
-  4.80%   17.373      1 Template:Draft_Tools_navi/de
-  2.40%    8.685      2 Template:Navigation_menu_2
-  1.95%    7.046      7 Template:RadioButton
-  1.95%    7.042     10 Template:Code
-  1.35%    4.899     10 Template:CheckBox
-  1.24%    4.488      6 Template:SpinBox
-  1.11%    4.008      1 Template:Macro/de
-  1.01%    3.659      1 Template:Userdocnavi/de
-  0.88%    3.192      3 Template:ColoredText
+100.00%  422.315      1 -total
+  3.83%   16.189      6 Template:SpinBox
+  2.86%   12.081      1 Template:Draft_Tools_navi/de
+  1.32%    5.576      7 Template:RadioButton
+  1.23%    5.190      2 Template:Navigation_menu_2
+  1.20%    5.047     10 Template:Code
+  1.14%    4.802     10 Template:CheckBox
+  1.09%    4.592      3 Template:ColoredText
+  1.02%    4.324      1 Template:Codeextralink
+  0.98%    4.131      1 Template:Macro/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260111224627 and revision id 1736709. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117141729 and revision id 1739542. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
