--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (90% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (95% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (96% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -366,7 +366,7 @@ If the command is not used in the option chosen, it will be grayed out.
 <li>End angle.</li>
 <li>Correction angle.</li>
 <li>Correction radius.</li>
-<li>The buttom <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> or <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
+<li>The button <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> or <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
 <li>The area <b>Clock</b> is activated.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213507
+Cached time: 20260117141803
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.273 seconds
-Real time usage: 0.344 seconds
+CPU time usage: 0.405 seconds
+Real time usage: 0.478 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  182.870      1 -total
-  4.95%    9.061      1 Template:Draft_Tools_navi
-  3.28%    6.007      2 Template:Navigation_menu_2
-  3.08%    5.629     10 Template:Code
-  2.23%    4.074     10 Template:CheckBox
-  2.19%    4.001      7 Template:RadioButton
-  2.17%    3.964      1 Template:Userdocnavi
-  1.84%    3.372      1 Template:Macro
-  1.77%    3.244      3 Template:ColoredText
-  1.75%    3.196      6 Template:SpinBox
+100.00%  244.322      1 -total
+  3.17%    7.737      1 Template:Draft_Tools_navi
+  2.77%    6.772     10 Template:Code
+  2.47%    6.045      2 Template:Navigation_menu_2
+  2.07%    5.056      6 Template:SpinBox
+  1.76%    4.304      7 Template:RadioButton
+  1.73%    4.237      3 Template:ColoredText
+  1.47%    3.588      1 Template:Userdocnavi
+  1.33%    3.248      1 Template:Macro
+  1.26%    3.087     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213507 and revision id 1736501. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260117141816 and revision id 1739543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
