Updated page TechDraw CosmeticCircle/fr

--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -54,7 +54,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cercle cosm&eacute;tique</b> ajoute un cercle cosm&eacute;tique &agrave; un point central s&eacute;lectionn&eacute;. Le point peut &ecirc;tre en 2D ou en 3D.
+<p>L'outil <b>TechDraw Cercle cosm&eacute;tique par 1 point</b> ajoute un cercle cosm&eacute;tique &agrave; un point central s&eacute;lectionn&eacute;. Le point peut &ecirc;tre en 2D ou en 3D.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CosmeticCircleSample.png&amp;filetimestamp=20230920163310&amp;.html" class="mw-file-description"><img src="../File/CosmeticCircleSample.png" decoding="async" width="200" height="216" class="mw-file-element" data-file-width="286" data-file-height="309"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Cercle cosm&eacute;tique</p>
@@ -143,12 +143,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117143852
+Cached time: 20260117143904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.168 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.203 seconds
 Preprocessor visited node count: 406/1000000
 Post&#8208;expand include size: 27241/2097152 bytes
 Template argument size: 10389/2097152 bytes
@@ -159,19 +159,19 @@ Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.074      1 -total
- 37.99%   19.402      1 Template:TechDraw_Tools_navi/fr
- 19.63%   10.027      2 Template:Navigation_menu_2
- 12.89%    6.584      1 Template:Userdocnavi/fr
- 12.47%    6.368      1 Template:KEY
-  6.82%    3.485      1 Template:GuiCommand/fr
-  6.61%    3.374      2 Template:Docnav/fr
-  6.19%    3.163      1 Template:Caption
-  6.09%    3.112      1 Template:Incode
-  3.64%    1.857      2 Template:MenuCommand
+100.00%   54.238      1 -total
+ 17.60%    9.548      2 Template:Docnav/fr
+ 14.07%    7.629      1 Template:TechDraw_Tools_navi/fr
+ 13.48%    7.311      1 Template:GuiCommand/fr
+ 10.90%    5.914      2 Template:Navigation_menu_2
+ 10.47%    5.676      1 Template:Userdocnavi/fr
+  9.13%    4.955      4 Template:Button
+  8.74%    4.742      2 Template:MenuCommand
+  7.90%    4.283      1 Template:KEY
+  6.06%    3.288      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143851 and revision id 1739556. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143904 and revision id 1739558. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
