Updated page TechDraw ExtensionDrawCosmCircle/fr

--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -73,14 +73,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique par 1 point</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle cosm&eacute;tique par 3 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -120,15 +118,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144036
+Cached time: 20260117144050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.115 seconds
-Preprocessor visited node count: 350/1000000
-Post&#8208;expand include size: 25585/2097152 bytes
-Template argument size: 10007/2097152 bytes
+CPU time usage: 0.072 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 349/1000000
+Post&#8208;expand include size: 25693/2097152 bytes
+Template argument size: 10079/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -136,18 +134,18 @@ Unstrip post&#8208;expand size: 1142/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.149      1 -total
- 29.29%    7.658      1 Template:TechDraw_Tools_navi/fr
- 21.49%    5.620      2 Template:Navigation_menu_2
- 17.42%    4.554      1 Template:GuiCommand/fr
- 15.96%    4.173      2 Template:Docnav/fr
- 13.55%    3.542      1 Template:Userdocnavi/fr
-  8.27%    2.162      1 Template:MenuCommand
-  6.99%    1.828      1 Template:Caption
-  6.03%    1.576      1 Template:Button
+100.00%   26.193      1 -total
+ 34.23%    8.965      1 Template:TechDraw_Tools_navi/fr
+ 25.56%    6.696      2 Template:Navigation_menu_2
+ 15.89%    4.161      1 Template:Userdocnavi/fr
+ 14.81%    3.880      1 Template:Caption
+ 12.10%    3.169      1 Template:GuiCommand/fr
+  8.11%    2.125      2 Template:Docnav/fr
+  6.65%    1.741      1 Template:MenuCommand
+  6.27%    1.642      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144036 and revision id 1739564. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144050 and revision id 1739566. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
