Updated page TechDraw ExtensionDrawCosmCircle3Points/fr

--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -72,14 +72,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">Ligne parall&egrave;le</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle cosm&eacute;tique par 2 points</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -119,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144836
+Cached time: 20260117144851
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 350/1000000
-Post&#8208;expand include size: 25671/2097152 bytes
-Template argument size: 10109/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 349/1000000
+Post&#8208;expand include size: 25764/2097152 bytes
+Template argument size: 10171/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -135,18 +133,18 @@ Unstrip post&#8208;expand size: 1215/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.322      1 -total
- 26.58%    8.325      2 Template:Navigation_menu_2
- 25.98%    8.138      1 Template:TechDraw_Tools_navi/fr
- 25.98%    8.136      1 Template:Userdocnavi/fr
- 11.82%    3.703      1 Template:GuiCommand/fr
- 11.82%    3.703      2 Template:Docnav/fr
- 11.54%    3.613      1 Template:Caption
-  5.66%    1.772      1 Template:MenuCommand
-  4.63%    1.451      1 Template:Button
+100.00%   28.975      1 -total
+ 36.70%   10.634      1 Template:TechDraw_Tools_navi/fr
+ 25.31%    7.333      2 Template:Navigation_menu_2
+ 17.73%    5.137      1 Template:Userdocnavi/fr
+ 12.28%    3.558      2 Template:Docnav/fr
+ 10.76%    3.117      1 Template:GuiCommand/fr
+  7.74%    2.243      1 Template:Caption
+  7.19%    2.084      1 Template:Button
+  4.32%    1.253      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144836 and revision id 1739577. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144851 and revision id 1739579. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
