Updated page TechDraw ExtensionDrawCosmCircle3Points/fr

--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDrawCosmCircle3Points/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDrawCosmCircle3Points&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHilfskreisDurch3PunkteZeichnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmCircle3Points (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny oparty na trzech punktach (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle cosm&eacute;tique par 2 points</a></div>
@@ -57,14 +57,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous povez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez trois sommets sur la circonf&eacute;rence pour d&eacute;terminer le cercle.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cercle cosm&eacute;tique par 3 points</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 3 points</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cercle cosm&eacute;tique par 3 points</b> du menu.</li></ul></li>
 <li>Un cercle cosm&eacute;tique est ajout&eacute;.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -112,34 +110,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144948
+Cached time: 20260117145047
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.151 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25800/2097152 bytes
-Template argument size: 10206/2097152 bytes
+CPU time usage: 0.073 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25793/2097152 bytes
+Template argument size: 10199/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1216/5000000 bytes
+Unstrip post&#8208;expand size: 1220/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.355      1 -total
- 23.26%    6.828      1 Template:TechDraw_Tools_navi/fr
- 19.59%    5.751      2 Template:Navigation_menu_2
- 18.29%    5.370      2 Template:Docnav/fr
- 17.16%    5.038      1 Template:Userdocnavi/fr
- 12.14%    3.563      1 Template:Caption
- 11.36%    3.336      1 Template:GuiCommand/fr
-  8.92%    2.619      1 Template:MenuCommand
-  5.98%    1.754      1 Template:Button
+100.00%   34.912      1 -total
+ 23.62%    8.246      1 Template:TechDraw_Tools_navi/fr
+ 18.14%    6.334      2 Template:Docnav/fr
+ 16.31%    5.693      1 Template:GuiCommand/fr
+ 13.74%    4.797      2 Template:Navigation_menu_2
+ 13.32%    4.651      1 Template:Caption
+  9.44%    3.294      1 Template:MenuCommand
+  9.38%    3.274      1 Template:Button
+  7.16%    2.499      1 Template:Userdocnavi/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144948 and revision id 1739585. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117145047 and revision id 1739587. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
